<resources>
    <string name="app_name">Mine</string>
    <string name="tab_text_1">Automatic Location</string>
    <string name="tab_text_2">Manual Location</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="ip">Ip:</string>
    <string name="port">Port:</string>
    <string name="connect">Connect</string>
    <string name="set_up_ip_and_port">Set Up Ip and Port</string>
    <string name="sample_time">Sample Time</string>
    <string name="set_up_sample_time_for_manual_location">Set Up Sample Time for Manual Location</string>
    <string name="ok">ok</string>
    <string name="get_location_and_publish">Get Location And Publish</string>
    <string name="location">Location</string>
</resources>