<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sett">

    <EditText
        android:id="@+id/edittext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:digits="0123456789.:"
        android:hint="@string/ip"
        android:inputType="number|numberDecimal"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/edittext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:digits="0123456789.:"
        android:hint="@string/port"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        android:textSize="16dp" />


    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="150dp"
        android:text="@string/connect"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:text="@string/set_up_ip_and_port"
        android:textSize="40dp"></TextView>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext2"
        android:layout_marginTop="25dp"
        android:textSize="15dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_send"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="465dp"
        android:text="@string/logout" />


</RelativeLayout>